...
    <string name="auth_cancel_message">Sign-in canceled.</string>
    <string name="auth_signed_in_message">Already signed in.</string>
    <string name="auth_email_resend_timer_message">Please try a few seconds later.</string>
    <string name="auth_signed_out_message">Signed out.</string>

    <!-- Onboarding -->
    <string name="onboarding_get_started">Get Started</string>
    <string name="onboarding_browse_food_title">Browse your favourite food</string>
    <string name="onboarding_browse_food_description">Find your favourite food in campus restaurants with the latest discounts and promotions</string>
    <string name="onboarding_group_orders_title">Create group orders</string>
    <string name="onboarding_group_orders_description">You can create group orders with your friends and colleague to enjoy better discounts</string>
    <string name="onboarding_pick_up_delivery_title">Pick up or delivery</string>
    <string name="onboarding_pick_up_delivery_description">You can enjoy our fast delivery service or pick up your orders in person</string>

    <!-- Fragment Label -->
    <string name="nav_title_seller">Restaurants</string>
    <string name="nav_title_order">Order</string>
    <string name="nav_title_explore">Explore</string>
    <string name="nav_title_settings">Settings</string>
...
