<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.tabs.TabLayout
            style="@style/Widget.Foobar.TabLayout.CircleDot"
            android:id="@+id/tab_layout"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_gravity="bottom|center_horizontal" />

    </FrameLayout>

</layout>
